Fix z-index of things that move

--- a/assets/scss/base/_header.scss
+++ b/assets/scss/base/_header.scss
@@ -11,7 +11,7 @@
     position: fixed;
     top: $spacer * 4;
     left: $spacer * 4;
-    z-index: 3;
+    z-index: 10;
   }
 
 }
