--- a/assets/scss/base/_nav.scss
+++ b/assets/scss/base/_nav.scss
@@ -8,7 +8,7 @@ $sub-nav-link-hover: $white;
 
 .main-nav {
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   top: 0;
   left: 0;
   height: 100%;
@@ -31,20 +31,6 @@ $sub-nav-link-hover: $white;
   }
 }
 
-.main-nav {
-  .cancel {
-    z-index: 2;
-    position: fixed;
-    top: $spacer * 2;
-    right: $spacer * 2;
-    cursor: pointer;
-
-    svg {
-      stroke: $white;
-    }
-  }
-}
-
 .site-nav {
   transition: opacity $trans-time;
   position: relative;
@@ -54,6 +40,7 @@ $sub-nav-link-hover: $white;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+  line-height: $heading-line-height;
   @media screen and (max-width: $small-screen) {
     justify-content: flex-start;
     margin: 0 $small-site-gutters;
@@ -67,7 +54,7 @@ $sub-nav-link-hover: $white;
   }
   a {
     transition: color $trans-time;
-    font-size: $base-font-size * 2;
+    font-size: $base-font-size * 3;
     color: $nav-link;
     font-weight: bold;
     @media screen and (max-width: $small-screen) {
